force-app/main/default/objects/Rollup_Setting__mdt/Rollup_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Rollup Setting</label>
    <pluralLabel>Rollup Settings</pluralLabel>
</CustomObject>