force-app/main/default/objects/Rollup_Setting__mdt/fields/Aggregation_function__c.field-meta.xml
<CustomField>
    <fullName>Aggregation_function__c</fullName>
    <label>Aggregation function</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COUNT</fullName>
                <default>true</default>
                <label>COUNT</label>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>