force-app/main/default/objects/Rollup_Setting__mdt/fields/Child_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Name__c</fullName>
    <label>Child Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>