force-app/main/default/objects/Rollup_Setting__mdt/fields/Relationship_field_on_Child__c.field-meta.xml
<CustomField>
    <fullName>Relationship_field_on_Child__c</fullName>
    <label>Relationship field on Child</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>